@@ -15,7 +15,7 @@ AC_DEFUN([AC_FLDIGI_FLTK], [
       if test $? -ne 0; then
           AC_MSG_ERROR([$FLTK_CONFIG failed])
       fi
-      if test "x$FLTK_API_VERSION" = "x1.1" || "x$FLTK_API_VERSION" = "x1.2" || "x$FLTK_API_VERSION" = "x1.3"; then
+      if test "x$FLTK_API_VERSION" = "x1.1" || test "x$FLTK_API_VERSION" = "x1.2" || test "x$FLTK_API_VERSION" = "x1.3"; then
           HAVE_FLTK_API_VERSION=yes
       fi
       if test "${HAVE_FLTK_API_VERSION}" = "no"; then
