@@ -273,8 +273,7 @@ int main(int argc, char ** argv)
 	arq_init();
 
 #if USE_XMLRPC
-//	if (progdefaults.xmlrpc_server)
-		XML_RPC_Server::start(progdefaults.xmlrpc_address.c_str(), progdefaults.xmlrpc_port.c_str());
+	XML_RPC_Server::start(progdefaults.xmlrpc_address.c_str(), progdefaults.xmlrpc_port.c_str());
 #endif
 
 	int ret = Fl::run();
@@ -297,20 +296,6 @@ int main(int argc, char ** argv)
 
 
 void generate_option_help(void) {
-	// is there a better way of enumerating schemes?
-	// string schemes = "none";
-	// const char *possible_schemes[] = { "plastic", "gtk+", 0 };
-	// const char *old = Fl::scheme();
-	// const char **s = possible_schemes;
-	// while (*s) {
-	// 	Fl::scheme(*s);
-	// 	if (strcasecmp(*s, Fl::scheme()) == 0)
-	// 		schemes.append(" ").append(*s);
-	// 	s++;
-	// }
-	// Fl::scheme(old ? old : "none");
-
-
 	ostringstream help;
 	help << "Usage:\n"
 	     << "    " << PACKAGE_NAME << " [option...]\n\n";
@@ -342,8 +327,6 @@ void generate_option_help(void) {
 	     << "    The default is: " << progdefaults.arq_port << "\n\n"
 
 #if USE_XMLRPC
-	     << "  --xmlrpc-server\n"
-	     << "    Start the XML-RPC server\n\n"
 	     << "  --xmlrpc-server-address HOSTNAME\n"
 	     << "    Set the XML-RPC server address\n"
 	     << "    The default is: " << progdefaults.xmlrpc_address << "\n\n"
@@ -395,10 +378,6 @@ void generate_option_help(void) {
 	     << "   -na CLASSNAME, -name CLASSNAME\n"
 	     << "    Set the window class to CLASSNAME\n\n"
 
-	     // << "   -s SCHEME, -scheme SCHEME\n"
-	     // << "    Set the widget scheme\n"
-	     // << "    SCHEME can be one of: " << schemes << "\n\n"
-
 	     << "   -ti WINDOWTITLE, -title WINDOWTITLE\n"
 	     << "    Set the window title\n\n"
 
@@ -442,7 +421,7 @@ int parse_args(int argc, char **argv, int& idx)
 #endif
 	       OPT_CONFIG_DIR, OPT_EXPERIMENTAL, OPT_ARQ_ADDRESS, OPT_ARQ_PORT,
 #if USE_XMLRPC
-	       OPT_CONFIG_XMLRPC_ADDRESS, OPT_CONFIG_XMLRPC_PORT,
+	       OPT_CONFIG_XMLRPC, OPT_CONFIG_XMLRPC_ADDRESS, OPT_CONFIG_XMLRPC_PORT,
 #endif
                OPT_FONT, OPT_WFALL_WIDTH, OPT_WFALL_HEIGHT,
                OPT_WINDOW_WIDTH, OPT_WINDOW_HEIGHT, 
@@ -468,6 +447,7 @@ int parse_args(int argc, char **argv, int& idx)
 		{ "arq-server-port",    1, 0, OPT_ARQ_PORT },
 
 #if USE_XMLRPC
+		{ "xmlrpc-server",         0, 0, OPT_CONFIG_XMLRPC },
 		{ "xmlrpc-server-address", 1, 0, OPT_CONFIG_XMLRPC_ADDRESS },
 		{ "xmlrpc-server-port",    1, 0, OPT_CONFIG_XMLRPC_PORT },
 #endif
@@ -535,6 +515,10 @@ int parse_args(int argc, char **argv, int& idx)
 			break;
 
 #if USE_XMLRPC
+		case OPT_CONFIG_XMLRPC:
+			cerr << "W: the --" << longopts[longindex].name
+			     << " option will be removed in the next version\n";
+			break;
 		case OPT_CONFIG_XMLRPC_ADDRESS:
 			progdefaults.xmlrpc_address = optarg;
 			break;
@@ -736,7 +720,7 @@ double speed_test(int converter, unsigned repeat)
 	memset(src.data_in, 0, src.input_frames * sizeof(float));
 
 	// warm up
-	src_simple(&src, SRC_SINC_FASTEST, 1);
+	src_simple(&src, converter, 1);
 
 	struct timespec t0, t1;
 #ifdef _POSIX_MONOTONIC_CLOCK
@@ -745,7 +729,7 @@ double speed_test(int converter, unsigned repeat)
 	clock_gettime(CLOCK_REALTIME, &t0);
 #endif
 	for (unsigned i = 0; i < repeat; i++)
-		src_simple(&src, SRC_SINC_FASTEST, 1);
+		src_simple(&src, converter, 1);
 #ifdef _POSIX_MONOTONIC_CLOCK
 	clock_gettime(CLOCK_MONOTONIC, &t1);
 #else
